--- a/src/blog/post.mdx
+++ b/src/blog/post.mdx
@@ -2,6 +2,7 @@
 title: "My First Post"
 date: "2023-04-02"
 slug: "my-first-post"
+wow: "test"
 ---
 
 My first blog post! Now for some **bold text**!
